# lab_3_locomotion_and_sensing

turtle_bot_desc/: CMakeLists.txt  package.xml
turtle_bot_desc/config/: controllers.yaml  gz_bridge.yaml
turtle_bot_desc/launch/: spawn.launch.py  turtle_bot.launch.py
turtle_bot_desc/models/wall/: model.config  model.sdf
turtle_bot_desc/models/wall/materials/scripts/: grey_wall.material
turtle_bot_desc/turtle_bot/: base_layer.part  base_layer.stl  config.json  lidar.part  lidar.stl  mid_layer.part  mid_layer.stl  robot.urdf  standoff.part  standoff.stl  top_layer.part  top_layer.stl  turtle_bot.urdf.xacro  turtle_bot_core.xacro  wheel.part  wheel.stl
turtle_bot_desc/turtle_bot/control/: gazebo_control.xacro
turtle_bot_desc/turtle_bot/macros/: inertial.xacro  material.xacro  standoff.xacro  wheels.xacro
turtle_bot_desc/turtle_bot/sensors/: lidar.xacro
turtle_bot_wall_follower/: package.xml  setup.cfg  setup.py
turtle_bot_wall_follower/turtle_bot_wall_follower/: wall_follower.py
